[package]
name = "colearner"
version = "0.1.0"
edition = "2021"
authors = ["lonmstalker"]

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"

envy = "0.4.2"
tokio = "1.29.1"
teloxide = "0.12.2"

serde = { version = "1.0.171", features = ["derive"] }
derive_more = { version = "0.99.17", features = ["error"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
refinery = { version = "0.8.10", features = ["tokio-postgres"] }
deadpool-postgres = { version = "0.10.5", features = ["rt_tokio_1", "serde"] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1", "with-serde_json-1"] }